[build-system]
requires = [
    "setuptools>=42",
    "wheel",
    "cmake>=3.18",
    "pybind11>=2.11.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "pyorbbecsdk"
version = "1.3.1"
description = "pyorbbecsdk is apython wrapper for the OrbbecSDK"
readme = "README.md"
authors = [
    {name = "Joe Dong", email = "mocun@orbbec.com"}
]
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    "numpy",
    "opencv-python",
    "plyfile",
    "open3d",
    "av",
    "pygame",
]

[project.urls]
"Homepage" = "https://github.com/AzaleaRobotics/pyorbbecsdk"
"Bug Tracker" = "https://github.com/AzaleaRobotics/pyorbbecsdk/issues"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

