[build-system]
requires = [
    "setuptools>=42",
    "wheel",
    "cmake>=3.18,<4",
    "pybind11>=2.11.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "pyorbbecsdk-community"
version = "1.4.1"
description = "pyorbbecsdk-community is a community-maintained python wrapper for the OrbbecSDK"
readme = "README.md"
authors = [
    {name = "Joe Dong", email = "mocun@orbbec.com"},
    {name = "William Yan", email = "pypi@xinan-yan.com"}
]
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    "numpy",
    "opencv-python",
    "plyfile",
    "open3d",
    "av",
    "pygame",
]

[project.urls]
"Homepage" = "https://github.com/W-YXN/pyorbbecsdk"
"Bug Tracker" = "https://github.com/W-YXN/pyorbbecsdk/issues"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
"pyorbbecsdk" = ["*.pyi"]

[tool.setuptools.packages.find]
where = ["src"]

